# boltchat-rs

./: .gitignore  Cargo.toml  license  readme.md
examples/: default.rs  thread.rs
src/: lib.rs  main.rs  wait.rs
src/client/: client.rs  event_handler.rs  mod.rs  options.rs
src/events/: encode.rs  error_event.rs  event.rs  join_event.rs  leave_event.rs  message_event.rs  mod.rs  msg_event.rs
src/pgp/: key_pair.rs  mod.rs
src/stream/: stream.rs
src/utils/: timestamp.rs
