[package]
name = "boltchat"
version = "0.2.0"
authors = ["Wouter de Bruijn <wouter@debruijn.dev>"]
edition = "2018"

description = "Client library for bolt"
readme = "readme.md"
license = "MIT"
keywords = ["bolt", "boltchat"]

repository = "https://github.com/wouter173/boltchat-rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
pgp = "0.7.1"
